added navbar and tables

--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -1,11 +1,6 @@
-<nav>
-  <ul>
-    <li><a routerLink="home">Home</a></li>
-    <li><a routerLink="farm">Minhas Fazendas</a></li>
-    <li><a routerLink="market">Mercado</a></li>
-    <li><a routerLink="profile">Perfil</a></li>
-  </ul>
+<app-nav></app-nav>
 
-</nav>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
 
-<router-outlet></router-outlet>
