--- a/UI/src/styles.scss
+++ b/UI/src/styles.scss
@@ -2,3 +2,9 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 
 
+
+/* Importing Bootstrap SCSS file. */
+@import "./node_modules/bootstrap/scss/bootstrap";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
