--- a/UI/src/app/nav/nav.component.html
+++ b/UI/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand">Agro-Tech</a>
+    <a class="navbar-brand">Smart Class</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -11,10 +11,10 @@
           <a routerLink="home" routerLinkActive="active" class="nav-link">Página Principal</a>
         </li>
         <li class="nav-item">
-          <a routerLink="farm" routerLinkActive="active" class="nav-link">Minhas Fazendas</a>
+          <a routerLink="teacher" routerLinkActive="active" class="nav-link">Professores</a>
         </li>
         <li class="nav-item">
-          <a routerLink="market" routerLinkActive="active" class="nav-link">Mercado</a>
+          <a routerLink="student" routerLinkActive="active" class="nav-link">Alunos</a>
         </li>
       </ul>
       <ul class="navbar-nav" dropdown>
