--- a/UI/src/app/component-teacher/component-teacher.component.html
+++ b/UI/src/app/component-teacher/component-teacher.component.html
@@ -9,6 +9,7 @@
   <table class="table table-hover">
     <thead class="thead-dark">
       <tr>
+        <th scope="col">Visualizar</th>
         <th scope="col">#</th>
         <th scope="col">Nome</th>
         <th scope="col">Sobrenome</th>
@@ -16,6 +17,9 @@
     </thead>
     <tbody>
       <tr *ngFor="let teacher of teachers" style="cursor: pointer;" (click)="teacherSelect(teacher)">
+        <td>
+          <a [routerLink]="['/professor/', teacher.id]" class="text-dark btn btn-sm btn-outline-warning">Detalhe</a>
+        </td>
         <th scope="row">{{teacher.id}}</th>
         <td>{{teacher.name}}</td>
         <td>{{teacher.lastname}}</td>
