--- a/UI/src/app/nav/nav.component.html
+++ b/UI/src/app/nav/nav.component.html
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav me-auto">
         <li class="nav-item active">
-          <a routerLink="home" routerLinkActive="active" class="nav-link">Página Principal</a>
+          <a routerLink="home" routerLinkActive="active" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
           <a routerLink="teacher" routerLinkActive="active" class="nav-link">Professores</a>
