--- a/UI/src/app/component-student/component-student.component.html
+++ b/UI/src/app/component-student/component-student.component.html
@@ -65,8 +65,7 @@
           <td>{{student.date_enrollment}}</td>
           <td>
             <div class="btn-group">
-              <button (click)="openModal(template)" class="btn btn-sm btn-outline-primary">Professores</button>
-              <button class="btn btn-sm btn-outline-danger">Remover</button>
+              <button class="btn btn-sm btn-outline-danger" (click)="deleteSudent(student.idStudent)">Remover</button>
             </div>
           </td>
         </tr>
@@ -74,14 +73,3 @@
     </table>
   </div>
 </div>
-
-<ng-template #template>
-  <div class="modal-body">
-    <app-component-teacher></app-component-teacher>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn pull-right btn-danger" aria-label="Close" (click)="modalRef?.hide()">
-      FECHAR
-    </button>
-  </div>
-</ng-template>
